mdapipackage/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Initial_Inventory__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Initial Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Ordered__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Remaining__c</fullName>
        <formula>Initial_Inventory__c - Quantity_Ordered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>